debug/mysConflicts.output
语法

    0 $accept: def $end

    1 def: param_spec return_spec ','

    2 param_spec: type
    3           | name_list ':' type

    4 return_spec: type
    5            | name ':' type

    6 type: "id"

    7 name: "id"

    8 name_list: name
    9          | name ',' name_list


Terminals, with rules where they appear

$end (0) 0
',' (44) 1 9
':' (58) 3 5
error (256)
"id" (258) 6 7


Nonterminals, with rules where they appear

$accept (6)
    左： 0
def (7)
    左： 1, 右： 0
param_spec (8)
    左： 2 3, 右： 1
return_spec (9)
    左： 4 5, 右： 1
type (10)
    左： 6, 右： 2 3 4 5
name (11)
    左： 7, 右： 5 8 9
name_list (12)
    左： 8 9, 右： 3 9


State 0

    0 $accept: . def $end

    "id"  shift, and go to state 1

    def         转到状态 2
    param_spec  转到状态 3
    type        转到状态 4
    name        转到状态 5
    name_list   转到状态 6


State 1

    6 type: "id" .
    7 name: "id" .

    "id"      reduce using rule 6 (type)
    $default  reduce using rule 7 (name)


State 2

    0 $accept: def . $end

    $end  shift, and go to state 7


State 3

    1 def: param_spec . return_spec ','

    "id"  shift, and go to state 20

    return_spec  转到状态 8
    type         转到状态 9
    name         转到状态 10


State 4

    2 param_spec: type .

    $default  reduce using rule 2 (param_spec)


State 5

    8 name_list: name .
    9          | name . ',' name_list

    ','  shift, and go to state 11

    $default  reduce using rule 8 (name_list)


State 6

    3 param_spec: name_list . ':' type

    ':'  shift, and go to state 12


State 7

    0 $accept: def $end .

    $default  接受


State 8

    1 def: param_spec return_spec . ','

    ','  shift, and go to state 13


State 9

    4 return_spec: type .

    $default  reduce using rule 4 (return_spec)


State 10

    5 return_spec: name . ':' type

    ':'  shift, and go to state 14


State 11

    9 name_list: name ',' . name_list

    "id"  shift, and go to state 15

    name       转到状态 5
    name_list  转到状态 16


State 12

    3 param_spec: name_list ':' . type

    "id"  shift, and go to state 17

    type  转到状态 18


State 13

    1 def: param_spec return_spec ',' .

    $default  reduce using rule 1 (def)


State 14

    5 return_spec: name ':' . type

    "id"  shift, and go to state 17

    type  转到状态 19


State 15

    7 name: "id" .

    $default  reduce using rule 7 (name)


State 16

    9 name_list: name ',' name_list .

    $default  reduce using rule 9 (name_list)


State 17

    6 type: "id" .

    $default  reduce using rule 6 (type)


State 18

    3 param_spec: name_list ':' type .

    $default  reduce using rule 3 (param_spec)


State 19

    5 return_spec: name ':' type .

    $default  reduce using rule 5 (return_spec)


State 20

    6 type: "id" .
    7 name: "id" .

    ':'       reduce using rule 7 (name)
    $default  reduce using rule 6 (type)
